crates/postgres-subsystem/postgres-core-builder/src/snapshots/with_access.snap
---
source: crates/postgres-subsystem/postgres-core-builder/src/resolved_builder.rs
expression: resolved
---
values:
  - - ~
    - Primitive:
        Plain: Boolean
  - - ~
    - Primitive:
        Plain: Int
  - - ~
    - Primitive:
        Plain: Float
  - - ~
    - Primitive:
        Plain: Decimal
  - - ~
    - Primitive:
        Plain: String
  - - ~
    - Primitive:
        Plain: LocalTime
  - - ~
    - Primitive:
        Plain: LocalDateTime
  - - ~
    - Primitive:
        Plain: LocalDate
  - - ~
    - Primitive:
        Plain: Instant
  - - ~
    - Primitive:
        Plain: Json
  - - ~
    - Primitive:
        Plain: Blob
  - - ~
    - Primitive:
        Plain: Uuid
  - - ~
    - Primitive:
        Plain: Vector
  - - ~
    - Composite:
        name: Concert
        plural_name: Concerts
        representation: Managed
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - id
            self_column: true
            is_pk: true
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value:
              AutoIncrement: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: title
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_names:
              - title
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: public
            typ:
              Plain:
                type_name: Boolean
                is_primitive: true
            column_names:
              - public
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
        table_name:
          name: concerts
          schema: ~
        access:
          default:
            LogicalOp:
              Or:
                - RelationalOp:
                    Eq:
                      - FieldSelection:
                          Select:
                            - Single:
                                - Identifier:
                                    - AuthContext
                                    - Reference:
                                        index: 16
                                        generation: ~
                                - Reference:
                                    index: 16
                                    generation: ~
                            - Identifier:
                                - role
                                - Defer
                            - Reference:
                                index: 4
                                generation: ~
                      - StringLiteral:
                          - ROLE_ADMIN
                      - Primitive:
                          Plain: Boolean
                - FieldSelection:
                    Select:
                      - Single:
                          - Identifier:
                              - self
                              - Reference:
                                  index: 17
                                  generation: ~
                          - Reference:
                              index: 17
                              generation: ~
                      - Identifier:
                          - public
                          - Defer
                      - Reference:
                          index: 0
                          generation: ~
                - Primitive:
                    Plain: Boolean
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
        doc_comments: ~
  - - ~
    - Composite:
        name: Venue
        plural_name: Venues
        representation: Managed
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - id
            self_column: true
            is_pk: true
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value:
              AutoIncrement: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: name
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_names:
              - name
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
        table_name:
          name: venues
          schema: ~
        access:
          default:
            BooleanLiteral:
              - true
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
        doc_comments: ~
  - - ~
    - Composite:
        name: Artist
        plural_name: Artists
        representation: Managed
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - id
            self_column: true
            is_pk: true
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value:
              AutoIncrement: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: name
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_names:
              - name
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
        table_name:
          name: artists
          schema: ~
        access:
          default:
            BooleanLiteral:
              - false
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
        doc_comments: ~
map:
  Artist:
    index: 15
    generation: ~
  Blob:
    index: 10
    generation: ~
  Boolean:
    index: 0
    generation: ~
  Concert:
    index: 13
    generation: ~
  Decimal:
    index: 3
    generation: ~
  Float:
    index: 2
    generation: ~
  Instant:
    index: 8
    generation: ~
  Int:
    index: 1
    generation: ~
  Json:
    index: 9
    generation: ~
  LocalDate:
    index: 7
    generation: ~
  LocalDateTime:
    index: 6
    generation: ~
  LocalTime:
    index: 5
    generation: ~
  String:
    index: 4
    generation: ~
  Uuid:
    index: 11
    generation: ~
  Vector:
    index: 12
    generation: ~
  Venue:
    index: 14
    generation: ~
